refactor input validation and dt asset check