@@ -20,6 +20,9 @@
 
 package org.eclipse.tractusx.sde.common.submodel.executor.create.steps.impl;
 
+import java.util.Set;
+
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Component;
 
 import com.fasterxml.jackson.databind.node.ObjectNode;
@@ -31,38 +34,30 @@ import com.google.gson.JsonParser;
 @Component
 public class RecordProcessUtils {
 
-	public void setFieldValue(ObjectNode rowjObject, String ele, JsonObject jObject, String fieldValue) {
+	public void setFieldValue(ObjectNode rowjObject, String ele, JsonObject jObject, String fieldValue,
+			boolean isNotNeedToRemoveFromFields) {
 
-		if (fieldValue == null)
-			fieldValue = "";
+		if (fieldValue != null)
+			fieldValue = fieldValue.trim();
 
-		fieldValue = fieldValue.trim();
-		if(isFieldEnumDataExpectAndisNull(jObject)) {
-			//no need to add null field if enum data expected and field is not require
+		if (isNotNeedToRemoveFromFields && StringUtils.isBlank(fieldValue)) {
+			// no need to add null field if enum data expected and field is not require
 			rowjObject.remove(ele);
-		}
-		else if (isNumberTypeField(jObject)) {
-			if (fieldValue.isBlank()) {
+		} else if (isNumberTypeField(jObject)) {
+			if (StringUtils.isBlank(fieldValue))
 				rowjObject.putNull(ele);
-			} else {
-				rowjObject.put(ele, Double.parseDouble(fieldValue));
-			}
-		} else if (isDateFormatField(jObject)) {
-
-			if (fieldValue.isBlank())
-				fieldValue = null;
 			else
-				fieldValue = fieldValue.toUpperCase().endsWith("Z") ? fieldValue : fieldValue + "Z";
-
-			rowjObject.put(ele, fieldValue);
-
+				rowjObject.put(ele, Double.parseDouble(fieldValue));
+		} else if (isDateFormatField(jObject)) {
+			if (StringUtils.isBlank(fieldValue))
+				rowjObject.putNull(ele);
+			else
+				rowjObject.put(ele, fieldValue.toUpperCase().endsWith("Z") ? fieldValue : fieldValue + "Z");
 		} else {
-			if (fieldValue.isBlank())
-				fieldValue = null;
 			rowjObject.put(ele, fieldValue);
 		}
-	}
 
+	}
 
 	private boolean isDateFormatField(JsonObject jObject) {
 		return jObject.get("format") != null && "date-time".equals(jObject.get("format").getAsString());
@@ -78,8 +73,17 @@ public class RecordProcessUtils {
 
 	}
 
-	private boolean isFieldEnumDataExpectAndisNull(JsonObject jObject) {
-		return jObject.get("enum") != null && jObject.get("enum").isJsonArray() && jObject.get("minLength") == null;
+	public boolean isFieldEnumDataExpect(JsonObject jObject) {
+		return jObject.get("enum") != null && jObject.get("enum").isJsonArray();
+	}
+
+	public boolean isDependentField(String fieldName, JsonObject submodelDependentRequiredFields) {
+		Set<String> fields = submodelDependentRequiredFields.keySet();
+		return fields.stream().map(ele -> {
+			return submodelDependentRequiredFields.get(ele).getAsJsonArray();
+		}).filter(ele -> {
+			return ele.contains(JsonParser.parseString(fieldName));
+		}).findFirst().isEmpty();
 	}
 
 }
